# alterego_aruco_detection

./: CMakeLists.txt  README.md  package.xml
launch/: aruco_detection.launch
src/: aruco_detector.py  calibration_zed.py  publish_marker_goal.py
src/old/: aruco_dimension.py  aruco_generator.py  calibration_data.npz  calibration_zed.py
