<?xml version="1.0"?>
<package format="2">
  <name>alterego_aruco_detection</name>
  <version>0.0.0</version>
  <description>The aruco_detection package</description>

  <maintainer email="giovanni.rosato@iit.it">GiovanniRosato</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>alterego_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  
  <!-- Execution dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>alterego_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>